  notification sending.
- filepanel puts dirs on top of list (Wolff <wolff@cybercable.fr>)
- added WMReplaceInBag (Wolff <wolff@cybercable.fr>)
- added vertical views and multiple views in WMSplitView (Wolff <wolff@cybercable.fr>)
- changed values of parameter values of WMSplitViewConstrainProc()
- configurable default fontsize patch (Igor P. Roboul <igor@mordor.myip.org>)

changes since wmaker 0.61.0:
............................

- added WMGetTextFieldFont()
- escape key in panels (craig nellist <crn@ozemail.com.au>)
- applied patch with fixes and enhancements to textfield 
	(Franck Wolff <wolff@cybercable.fr>)
- changed WMList to use WMBag internally, instead of a linked list
- replaced WMAddSortedListItem() with WMSortListItems()
- replaced WMAddSortedBrowserItem() with WMSortBrowserColumn()

changes since wmaker 0.60.0:
............................

- added WMScreenWidth() and WMScreenHeight() functions.
- fixed some problems when compiling with non gcc compilers.
- added WMSetTextFieldFont()
- added WMSetButtonImageDefault() (craig nellist <crn@ozemail.com.au>)
- added WMBag (array/list)
- added libWUtil, a library that is a subset of libWINGs. It contains utils
  that can be used in writing non-GUI programs. They include: hashes,
  notifications, input/idle/timer handlers, user defaults database handling,
  memory handling, application resource handling, etc.
  All the non-GUI stuff from libWINGs is present.
  Still linWINGs contain all this stuff so if you use libWINGs, you don't
  need to link against libWUtil too.
  One notable aspect of libWUtil is that it has a modified version of the
  event handling function. It is named WHandleEvents() and will handle all
  input/idle/timer events the app has.
  If your app has a permanent input handler (as for example a socket a server
  is listening on), then the main loop of the app can be:
  	while(1) {
    	    WHandleEvents();
  	}
  but if there is no permanent input handler, you need to add some delay to